force-app/main/default/objects/Form_Configuration__c/Form_Configuration__c.object-meta.xml
<CustomObject>
    <description>Defines a dynamic form: the target object, submission behavior, composite/multi-step settings, and security options. Rendered by the Dynamic Form Builder LWC engine.</description>
    <label>Form Configuration</label>
    <nameField>
        <label>Form Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>