force-app/main/default/objects/Form_Configuration__c/fields/Available_For_Guest_Users__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Guest_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows this form&apos;s configuration (structure only, not target-object data) to be read by unauthenticated Experience Cloud guest users.</description>
    <inlineHelpText>When checked, config fetch runs in system mode so guest users without direct object access can still load the form&apos;s structure. Submission DML still enforces the running user&apos;s actual access.</inlineHelpText>
    <label>Available For Guest Users</label>
    <type>Checkbox</type>
</CustomField>