force-app/main/default/objects/Form_Configuration__c/fields/Disable_Form_Validations__c.field-meta.xml
<CustomField>
    <fullName>Disable_Form_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the engine skips required-field, pattern, and conditional-rule validations at submit time.</description>
    <inlineHelpText>Use for quick, low-friction internal forms only. Field-Level Security is never skipped by this flag.</inlineHelpText>
    <label>Disable Form Validations</label>
    <type>Checkbox</type>
</CustomField>