force-app/main/default/objects/Form_Configuration__c/fields/DML_Operations__c.field-meta.xml
<CustomField>
    <fullName>DML_Operations__c</fullName>
    <description>Which DML operations this form configuration supports.</description>
    <inlineHelpText>Controls whether the form can create, edit, upsert, or delete the target record. Drives which mode the engine renders in.</inlineHelpText>
    <label>DML Operations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>