force-app/main/default/objects/Form_Configuration__c/fields/Failure_Handling__c.field-meta.xml
<CustomField>
    <fullName>Failure_Handling__c</fullName>
    <description>How a composite form handles a failure on any step.</description>
    <inlineHelpText>Only relevant on the master (Is Composite = true) record. Rollback undoes all prior steps&apos; DML on any failure. Retry keeps successful steps committed and only re-renders the failed step.</inlineHelpText>
    <label>Failure Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rollback All Steps</fullName>
            </value>
            <value>
                <fullName>Retry Failed Step Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>