force-app/main/default/objects/Form_Configuration__c/fields/Form_Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Form_Display_Title__c</fullName>
    <description>Title rendered at the top of the form for end users.</description>
    <inlineHelpText>Shown as the form&apos;s heading. Leave blank to use the Form Configuration Name instead.</inlineHelpText>
    <label>Form Display Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>