force-app/main/default/objects/Form_Configuration__c/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <description>Optional note explaining why this form was deactivated. Informational only; does not affect behavior.</description>
    <inlineHelpText>e.g. &apos;Replaced by v2 vendor form&apos;, &apos;Deprecated Q3 2026&apos;.</inlineHelpText>
    <label>Inactive Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>