force-app/main/default/objects/Form_Configuration__c/fields/Insert_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Insert_Button_Label__c</fullName>
    <description>Label shown on the submit button when the form is creating a new record.</description>
    <inlineHelpText>Defaults to &apos;Submit&apos; in the LWC if left blank.</inlineHelpText>
    <label>Insert Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>