force-app/main/default/objects/Form_Configuration__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this form configuration is available for rendering.</description>
    <inlineHelpText>Uncheck to retire this form without deleting its configuration or history.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>