force-app/main/default/objects/Form_Configuration__c/fields/Is_Composite__c.field-meta.xml
<CustomField>
    <fullName>Is_Composite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this configuration as the master record of a multi-step composite form (a guided flow spanning multiple objects).</description>
    <inlineHelpText>Set only on the master config. Individual steps are separate Form_Configuration__c records linked via Parent Form Configuration.</inlineHelpText>
    <label>Is Composite</label>
    <type>Checkbox</type>
</CustomField>