force-app/main/default/objects/Form_Configuration__c/fields/Link_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Link_Field_API_Name__c</fullName>
    <description>The API name of the field on this step&apos;s object that should be auto-populated with the previous step&apos;s newly created record Id.</description>
    <inlineHelpText>e.g. &apos;AccountId&apos; on a Contact step that follows an Account step. Leave blank for the first step in a composite chain.</inlineHelpText>
    <label>Link Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>