force-app/main/default/objects/Form_Configuration__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the target Salesforce object this form creates or updates (e.g. Account, Contact, or a custom object).</description>
    <inlineHelpText>Must be a valid, deployed object API name. This drives the schema describe used to build the form.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>