force-app/main/default/objects/Form_Configuration__c/fields/Parent_Form_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Parent_Form_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The composite master form configuration this record is a step of. Blank for standalone forms and for the master itself.</description>
    <inlineHelpText>Populate only on step configs that belong to a composite (multi-object) form.</inlineHelpText>
    <label>Parent Form Configuration</label>
    <referenceTo>Form_Configuration__c</referenceTo>
    <relationshipLabel>Composite Steps</relationshipLabel>
    <relationshipName>Composite_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>