force-app/main/default/objects/Form_Configuration__c/fields/Step_Order__c.field-meta.xml
<CustomField>
    <fullName>Step_Order__c</fullName>
    <description>The order in which this step renders within its composite form.</description>
    <inlineHelpText>Only relevant when Parent Form Configuration is populated. Lower numbers render first.</inlineHelpText>
    <label>Step Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>