force-app/main/default/objects/Form_Configuration__c/fields/Success_Message_Update__c.field-meta.xml
<CustomField>
    <fullName>Success_Message_Update__c</fullName>
    <description>Custom message shown to the user after a successful record update.</description>
    <inlineHelpText>Leave blank to use the engine&apos;s default success message.</inlineHelpText>
    <label>Success Message (Update)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>