force-app/main/default/objects/Form_Configuration__c/fields/Update_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Update_Button_Label__c</fullName>
    <description>Label shown on the submit button when the form is editing an existing record.</description>
    <inlineHelpText>Defaults to &apos;Save&apos; in the LWC if left blank.</inlineHelpText>
    <label>Update Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>